fix: posted date align

--- a/assets/home.scss
+++ b/assets/home.scss
@@ -149,6 +149,10 @@
       font-size: 1.2rem;
       color: var(--color-text);
     }
+
+    .time.right {
+      text-align: right;
+    }
   }
 }
 
